# config-multiformat-loader

./: .gitignore  .gitlab-ci.yml  .vulture-whitelist.cfg  LICENSE  README.md  Taskfile.yml  pyproject.toml  setup.py
.config/: meta.yml
.github/workflows/: build.yml  lint.yml  publish.yml
config/: __init__.py  baseclasses.py  constants.py  interfaces.py  json.py  memory.py  stub.py  utils.py  yaml.py
tests/: conftest.py  constants.py  fixtures.py  test_baseclasses.py  test_factory.py  test_interfaces.py  test_json.py  test_memory.py  test_source.py  test_stub.py  test_utils.py  test_yaml.py  utils.py
tests/data/: configuration.json  configuration.yml
tests/reducers/: memory.py
